feat: update components and styles for improved UI/UX
- Added new logo image for branding.
- Updated icons in Credibility, FAQ, PainPoints, Process, and Services components for better visual representation.
- Enhanced layout and styling in various components, including adjustments to text alignment and spacing.
- Improved responsiveness and hover effects in FloatingWhatsApp and buttons.
- Refined section separators and headers for a more cohesive design.
- Adjusted color variables in CSS for better contrast and readability.
- Removed unused baseUrl in tsconfig for cleaner configuration.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marena — Recuperação Ambiental e Controle de Erosão</title>
+    <title>Marena | Recuperação Ambiental e Controle de Erosão</title>
     <meta name="description" content="Hidrossemeadura e soluções de revegetação para conter erosão, atender exigências ambientais e recuperar taludes, beiras de estrada e áreas degradadas. Avaliação técnica e execução em campo." />
     <meta name="author" content="Marena" />
     <meta name="robots" content="index, follow" />
 
-    <meta property="og:title" content="Marena — Recuperação Ambiental e Controle de Erosão" />
+    <meta property="og:title" content="Marena | Recuperação Ambiental e Controle de Erosão" />
     <meta property="og:description" content="Hidrossemeadura e soluções de revegetação para conter erosão, atender exigências ambientais e recuperar áreas degradadas." />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pt_BR" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Marena — Recuperação Ambiental e Controle de Erosão" />
+    <meta name="twitter:title" content="Marena | Recuperação Ambiental e Controle de Erosão" />
     
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
