Update assets, contact info, and PWA support
Replaces gallery images to use public folder assets and updates the favicon, manifest, and meta tags for improved PWA/browser support.

Updates WhatsApp number and email address throughout the site for accurate contact.

Adds Brasília, DF to operating locations for clarity.

Upgrades Vite for build improvements.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,26 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MARENA | Recuperação Ambiental e Controle de Erosão" />
     
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <!-- Theme color for browsers / PWA -->
+    <meta name="theme-color" content="#0f7a45" />
+
+    <!-- Apple -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon.ico" />
+
+    <!-- PWA manifest -->
+    <link rel="manifest" href="/site.webmanifest">
+
+    <!-- Safari pinned tab (SVG) -->
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#0f7a45">
+
+    <!-- Windows tile -->
+    <meta name="msapplication-TileColor" content="#0f7a45" />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
   </head>
   <body>
     <div id="root"></div>
