--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MARENA | Recuperação Ambiental e Controle de Erosão</title>
-    <meta name="description" content="Hidrossemeadura e soluções de revegetação para conter erosão, atender exigências ambientais e recuperar taludes, beiras de estrada e áreas degradadas. Avaliação técnica e execução em campo." />
+    <meta name="description" content="Hidrossemeadura e soluções de revegetação para conter erosão, atender exigências ambientais e recuperar taludes, margem de rodovias e áreas degradadas. Avaliação técnica e execução em campo." />
     <meta name="author" content="MARENA" />
     <meta name="robots" content="index, follow" />
 
@@ -36,8 +36,29 @@
     <!-- Windows tile -->
     <meta name="msapplication-TileColor" content="#0f7a45" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
+
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "vhr1cmucgf");
+    </script>
+    <script type="text/javascript">
+      window.clarity("consentv2", {
+        ad_Storage: "granted",
+        analytics_Storage: "granted",
+      });
+    </script>
   </head>
-  <body>
+  <body data-clarity-unmask="true">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
